# SCIENCE

./: .gitignore  README.md
1-ELE/: @todo.txt  CalcZ.m
1-ELE/ARM-Cortex/: arm_cortex.txt  cortex_notes.txt
1-ELE/LTSPICE/: ADC_2b_Flash.asc  DC_Restorer.asc  Envelope_Detector.asc  Impedance_Adapter.asc  Overvoltage_Protection_v1.asc  Overvoltage_Protection_v2.asc  Overvoltage_Protection_v3.asc  R2R_Ladder_DAC.asc  Sallen_Key_LPF.asc  Sallen_Key_LPF.m  Signal_Scaler.asc  Signal_Scaler_1.asc  Signal_Scaler_2.asc  Voltage_Doubler_AC_DC.asc  __3V3_to_5V_Converter.asc  __BPF_RLC.asc  __Comparator.asc  __Decoupling_Capacitor.asc  __HPF.asc  __LPF.asc  __RC_RL_Step_Response.asc  __Voltage_Controlled_Switch.asc
1-ELE/LTspice/: ground_loop.asc
1-ELE/QUARTUS/: University_VHDL.rar
1-ELE/RASPBERRY/: README.txt
2-TLC/: @todo.txt
2-TLC/AGC/: agc_cw.py  agc_psk.py
2-TLC/CRC/: CRC.cpp  CRC.m  CRC.py  CRC_CCITT.c  IterativeCrc.c
2-TLC/EQUALIZERS/: Equalizer_LMS.m  Equalizer_MSE.m
2-TLC/EQUALIZING/: Equalizer_LMS.m  Equalizer_MSE.m  Equalizer_ZF.m
2-TLC/FFT/: Check_FFT_cpp.m  DFT_vs_FFT.m  FFT_vs_DFT.cpp
2-TLC/FILTERING/: SampsRxC.csv  SampsTxC.csv  SymbsC.csv  adapt_filter_lms_line_enhancement.m  adapt_filter_lms_noise_canceling.m  adapt_filter_lms_system_modeling.m  bandpass_undersamp_filtering.m  check_cpp_filtering.m  check_freqz.m  check_iir_delay.m  fir_freq_samp_design.m  fir_optimal_design.m  fir_window_design.m  gaussian_fir_filter.c  gaussian_fir_filter.cpp  goertzel_spectrum.m  goertzel_tone_generator.m  iir_butterworth_desing.m  iir_chebyshev_design.m  iir_filter.c  iir_pole_zero_design.m  resamp_filtering.m  srrc_fir_filter.cpp
2-TLC/FIXED-POINT ARITHMETICS/: README.txt  dspic33ch_fixed_point_iir.m  fixed_point_arithmetics.m
2-TLC/GNUR/: xExtra_flag_appender_mm.block.yml
2-TLC/GNUR/VM_Ubuntu16/Libraries/gr-zVKN/grc/: CMakeLists.txt  zVKN_add_scrambler_p_mm.xml  zVKN_agc_p_cc.xml  zVKN_awgn_p_cc.xml  zVKN_check_rx_pkt_p_mx.xml  zVKN_flag_appender_c_mm.xml  zVKN_flag_appender_p_mm.xml  zVKN_fsk_modulator.xml  zVKN_gfsk_modulator.xml  zVKN_preamble_adder_c_bb.xml  zVKN_preamble_adder_tag_c_bb.xml  zVKN_prot_header_tx_p_mm.xml  zVKN_psk_decoder.xml  zVKN_psk_mapper_c_bc.xml  zVKN_psk_mapper_p_mm.xml  zVKN_squelch_agc_p_cc.xml  zVKN_srrc_filter_rx_c_cc.xml  zVKN_srrc_filter_rx_p_cc.xml  zVKN_srrc_filter_tx_c_cc.xml
2-TLC/GNUR/VM_Ubuntu16/Libraries/gr-zVKN/lib/: CMakeLists.txt  flag_appender_c_mm_impl.cc  flag_appender_c_mm_impl.h  preamble_adder_c_bb_impl.cc  preamble_adder_c_bb_impl.h  preamble_adder_tag_c_bb_impl.cc  preamble_adder_tag_c_bb_impl.h  psk_mapper_c_bc_impl.cc  psk_mapper_c_bc_impl.h  qa_zVKN.cc  qa_zVKN.h  srrc_filter_rx_c_cc_impl.cc  srrc_filter_rx_c_cc_impl.h  srrc_filter_tx_c_cc_impl.cc  srrc_filter_tx_c_cc_impl.h  test_zVKN.cc
2-TLC/INTERLEAVING/: interleaving_blk.cpp  interleaving_blk.m  interleaving_blk_cnv.m  interleaving_blk_cnv.py
2-TLC/MODULATIONS/: Gray.cpp  LaTeX.txt
2-TLC/QUANTIZATION/: analog_u_law_companding.m  sigma_delta.m
2-TLC/SCRAMBLING/: Scrambling.cpp  Scrambling.m  Scrambling.pptx  Scrambling.py
2-TLC/SYNCHRONIZATION/: CarSymbSync.m  car_sync.py  cs_latex.txt  dsss_symb_sync.py
2-TLC/_misc/: ASCII_conversion.m  Chessboard_Game.m  DVBS_Encoder_Decoder.m  Double_X_Axis_Plot.m  Equation_System_Solver.m  Linear_Resampler.m  ReadEngExcel.m  ReadEngExcel_v1.py  ReadEngExcel_v2.py  SDR_Rx_Simulation.m  SRRC_Tx_Rx_Filtering.m  Sound_Generator.m  Tx_Rx_Chain.m  Types_Casting.m  Vpp2dBm_Converter.m  bandpass_undersamp.m  bin2dec.m  eye_diagr.m  image_handler.m  poly_multiply.m
3-RF/MATLAB/: Dipole.m  Monopole.m  Yagi.m
4-INF/: @todo.txt  git_guide.txt
4-INF/C/: ExC.c  NOTES.txt  NOTES_C.txt  electrolux_interview.txt  ex_compilation_errors.c  ex_data_memory_occupation.c  ex_main_arg.c  ex_misc.c  fsm_example.c  function_pointers.c  misc_examples.c  notes_c.txt  notes_cx.txt
4-INF/C++/: ExCpp.cpp
4-INF/Git/: git_guide_windows.txt  git_notes_linux.txt  git_notes_lnx.txt  git_notes_win.txt  git_notes_windows.txt  post-checkout_PYTHON
4-INF/HTML/: VKN.html
4-INF/Java/: birthday.java  person.java  player.java
4-INF/Linux/: README.txt  ex1.bash  ex2_cmd_history.txt  ex3_text_orig.txt  ex3_text_sort.txt
4-INF/MATLAB/: GNUR_File_Converter.m  README.txt  Spline_Resampler.m  Standing_Wave_Plot.m  Wave_Polarizations.m  _README.txt  class_wave.m  ex10_double_axis_labels.m  ex11_dvbs_chain.m  ex12_equation_system.m  ex13_live_script.mlx  ex14_eye_diagram.m  ex15_files_renamer.m  ex17_gold_sequence.m  ex18_image_manipulator.m  ex19_linear_resampling.m  ex1_log_15-Jul-2023_16-25-01.txt  ex1_misc.m  ex20_polynomials_multiplication.m  ex21_english.xlsx  ex21_read_excel.m  ex24_spline_interpolation.m  ex25_rtx_srrc_filtering.m  ex26_plot_standing_wave.m  ex27_spectrum_estimate.m  ex28_rtx_chain.m  ex29_types_casting.m  ex2_intab.txt  ex2_table_struct.m  ex30_vpp_dbm_converter.m  ex31_wave_polarization.m  ex32_zip_unzip.m  ex33_laplace.m  ex34_gui.mlapp  ex34_gui.prj  ex34_gui_info.txt  ex35a_list_maker.m  ex35b_list_filter.m  ex36_dir_files_parser.m  ex36_list.txt  (+11 more)
4-INF/Python/: .cache  GUI_template.py  LearnEng.py  LearnGer.py  buy_house.py  class_album.py  class_unit_test.py  com_handler.py  com_uart_handler.py  crypto_aes.py  crypto_overview.py  ctlr_rem_instrum.py  data_time.py  ex_data_analyzer_1.py  ex_data_analyzer_2.py  ex_plot_2_class.py  ex_plot_2_main.py  exported list_analyzer.py  exported_list_analyzer.py  folder_list_exporter.py  js_read.py  (+33 more)
4-INF/binutils/cmake/: CMakeLists.txt  cmake.bat
(+2212 files in other folders)
